--- a/src/html/nachalo.html
+++ b/src/html/nachalo.html
@@ -77,7 +77,7 @@
                         </a>
                     </li>
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/zafirmata.html" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/zafirmata.html" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-briefcase" style="font-size: 24px;"></i>
                                 <span>За фирмата</span>
