--- a/src/html/nachalo.html
+++ b/src/html/nachalo.html
@@ -36,13 +36,13 @@
 
     <header>
         <div id="content">
-            <a id="logo1" href="/nachalo.html"><img id="logo" src="/images/3.png" alt="greengoods.bg"></a>
+            <a id="logo1" href="src/html/nachalo.html"><img id="logo" src="/images/3.png" alt="greengoods.bg"></a>
             <div id="adres">
                 <div id="phone">
                     <a href="tel:0896677199"><i class="fa-solid fa-phone"></i> 0896 677 199</a>
                 </div>
                 <div id="location">
-                    <a href="/about.html"><i class="fa-solid fa-location-dot"></i> МАГАЗИНИ</a>
+                    <a href="src/html/about.html"><i class="fa-solid fa-location-dot"></i> МАГАЗИНИ</a>
                 </div>
             </div>
             <div id="search">
@@ -69,7 +69,7 @@
             <nav>
                 <ul style="display: flex; list-style-type: none; justify-content: center; padding: 10px; margin: 0; background-color: white;">
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/nachalo.html" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/nachalo.html" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-trophy" style="font-size: 24px;"></i>
                                 <span>Начало</span>
@@ -85,7 +85,7 @@
                         </a>
                     </li>
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/katalog.html" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/katalog.html" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-tree" style="font-size: 24px;"></i>
                                 <span>Каталог</span>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/promociq.php" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/promociq.php" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-leaf" style="font-size: 24px;"></i>
                                 <span>Промоция</span>
@@ -101,7 +101,7 @@
                         </a>
                     </li>
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/kontakti.html" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/kontakti.html" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-bread-slice" style="font-size: 24px;"></i>
                                 <span>Контакти</span>
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                     <li style="margin: 0 55px; text-align: center;">
-                        <a href="/avtor.html" style="text-decoration: none; color: #512d1e;">
+                        <a href="src/html/avtor.html" style="text-decoration: none; color: #512d1e;">
                             <div style="display: flex; flex-direction: column; align-items: center;">
                                 <i class="fa fa-address-book" style="font-size: 24px;"></i>
                                 <span>Автор</span>
